packages/example/content/boomerang-cicd/7.0.0/introduction/05.faq.md
---
title: Frequently Asked Questions
index: 5
---

# Frequently Asked Questions

## My repository hosting service is not supported

Please contact a Boomerang representative. We want to hear about your situation and see if we can incorporate adding support for your hosting service to our feature pipeline.

## Why do I need to authorize the Boomerang CICD OAuth app?

We need to retrieve a list of repositories for you choose from when onboarding a new component. We also need access to create the component with the selected repositories's information in our CICD automation systems and to create a webhook to communicate with our CICD services. These permissions are critical to the functioning of Boomerang CICD. The Boomerang CICD OAuth app does not request more access rights than required for it to function correctly.

## I authorized the Boomerang CICD OAuth application, but I am getting an error when trying to load my repos.

The Boomerang CICD web app will look for a saved cookie. If you have approved the repo host previously but manually revoked access (e.g. removed Boomerang CI from your approved list of apps in GitHub Enterprise), the cookie with still exist but the token associated with that cookie will no longer be valid. To resolve this, manually delete the cookie or hard refresh the browser when on the Boomerang CI web app to clear out all existing cookies for Boomerang CI.

This won't cause any issues but it will ask you to re-authenticate with any repository hosting service that you subsequently attempt to use.

## Adding my repo failed. What are my next steps?

- Have you created a CI component with this repository before that has been deleted? The repository might still have a webhook setup. Please try deleting the old webhook in the repository's settings and try again.

- Also, check to make sure that you have rights to create a webhook for the repository. If you don't, the service may not be able to create it for you depending on what org the repository is a member of.

## I push a new commit / tag that should trigger a build but nothing happens

- Check the .boomerang.properties file to ensure that your behavior should indeed trigger a build. See [Modes and Properties](/boomerang-cicd/how-to-guide/modes-and-properties).

- Check the Boomerang webhook in your repositories settings. For GitHub Enterprise, the path is https://github.ibm.com/{organization}/{repository}/settings/hooks. If there is a green ✅ next to it, then the webhook is being set correctly. Please contact a Boomerang representative as something else is awry that likely needs to be fixed on our end.

- If there is a red ⚠️ symbol, then please read the error response. A few common issues are:
  - Not all of the required values are present in the .boomerang.properties file
  - The repository exists in a organization that Boomerang does not have access to. Please contact a Boomerang representative about moving the repository to our organization or giving our service account access to it.

## How long does the CI system take on average?

The average performance can vary based on how many parallel activities are taking place. The following are recorded times from a Build run.

|           **Activity**           |    **Time**     |                                                      **What does this mean**                                                      |
| :------------------------------: | :-------------: | :-------------------------------------------------------------------------------------------------------------------------------: |
|         Receive webhook          |   3-4 seconds   |                                 A webhook has been received and could be processed into a request                                 |
|          Queue request           | 10 - 15 seconds |      A request has made it from the webhook to the CI orchestrator, split into relevant activities and placed in the Queue.       |
|         Establish worker         | 45 - 90 seconds | An activity has made it through the queue and worker is being created. _This timing does not include wait time for a worker slot_ |
| Activity - Initiate Dependencies |    3 minutes    |                    This includes things such as a unique keychain, fresh installations of gems, and cocoapods.                    |
|         Activity - Build         |   2 minutes +   |        Depends on the activity. It can be anyway from 2 minutes for a library to 10+ minutes for an iOS mobile application        |
|         Terminate Worker         | 8 - 10 seconds  |                        This is where we destroy the worker to ensure it is created clean again every time.                        |

## I am not able to download the activity log from the given link

This usually means the process has not yet got up to steps that have log output or the error was around providing the log back to the log storage system. You will need to talk to a Boomerang representative.

## The download log screen is blank

If you click on the download log link and it takes you to a blank screen, this means that no log is available, as not all steps output logs. We are working on making this experience better.

## I have previously set up Boomerang Lib NPM mirror as default NPM registry and want to remove it

If you have previously configured the Boomerang Lib NPM mirror as your default registry the command would have looked like this:

```
curl --user <W3ID Email Address>:<Artifactory Api Token> https://tools.boomerangplatform.net/artifactory/api/npm/auth > ~/.npmrc
npm config set registry https://tools.boomerangplatform.net/artifactory/api/npm/boomeranglib-npm-main/
```

Which would have resulted in the following configuration

```
_auth=
always-auth=true
email=
registry=https://tools.boomerangplatform.net/artifactory/api/npm/boomeranglib-npm-main/
```

To remove this configuration, follow these commands

**Automatically**

1. Run the following commands

```
npm config delete registry
npm config delete email
npm config delete always-auth
npm config delete _auth
```

2. Remove the npm or yarn lock files

3. Remove the node_modules folder

4. Re run npm or yarn install

**Manual**

1. Navigate to the location of your `.npmrc` file. This is different on Windows vs Linux / macOS

2. Remove the lines mentioned above, in particular the line that starts with `registry=` such as

```
registry=https://tools.boomerangplatform.net/artifactory/api/npm/boomeranglib-npm-main/
```

3. Save the `.npmrc` file

4. Remove the npm or yarn lock files

5. Remove the node_modules folder

6. Re run npm or yarn install

## Is there a device farm available as part of Boomerang

Access to a Sauce Labs device cloud is available at an additional cost to the base packages.

## We need to be able to test on both iOS and Android devices with a range of different OS

The device cloud integration allows for up to 3 simultaneous devices at any one time with a range of types and OS

## We will be able to run the functional automation tests in the pipeline when code is moved from an environment to another

Testing can be enabled for each Stage as required.  Gates can also be implemented to control promotion to higher level environments.

## We will need to run security scan of the code in the pipeline - for example Verracode

Boomerang offers additional packages at cost which can provide deep security scan. The default integrations are with Data Theorem or Application Security on the Cloud. Additional integrations with other security scanning tools can be made available.

## Our Mobile tests need Emulators and Simulators
When testing is enabled for a Stage a dedicated test worker is spun up alongside the build worker where appropriate simulators are used to execute Unit and UI tests.

## Sonarqube Test Activity Could Not Create Project Key

If you see `{"errors":[{"msg":"Could not create Project, key already exists: 5b30c411bba881000747b04b"}]}` in the logs, but the sonarqube test step continues through to `ANALYSIS SUCCESSFUL` then the step has actually completed. The above message occurs because we request the creation of the project key every execution to ensure it is available.

## Unable to see project in Sonarqube

The issue is most likely that your user needs to be given access to the sonarqube repository. This is not automatic and requires an administrator to map the project to the users access credentials.

## How do I perform a source code migration

If you're migrating from an existing git repository, the following commands can be used to migrate all branches and tags to a new repoistory.

1. Open Terminal.

2. Create a bare clone of the repository.

```
git clone --bare https://github.com/exampleuser/old-repository.git
```

3. Mirror-push to the new repository.

```
cd old-repository.git
git push --mirror https://github.com/exampleuser/new-repository.git
```

4. Remove the temporary local repository you created in step 1.

```
cd ..
rm -rf old-repository.git
```
